// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button-pure accessibility should expose accessibility tree description with slotted subline 1`] = `
Object {
  "description": "Some Subline",
  "name": "Some label",
  "role": "button",
}
`;

exports[`button-pure accessibility should expose correct accessibility name if label is hidden 1`] = `
Object {
  "name": "Some label",
  "role": "button",
}
`;

exports[`button-pure accessibility should expose correct initial accessibility tree properties 1`] = `
Object {
  "name": "Some label",
  "role": "button",
}
`;
